# subseq

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  requirements-dev.txt  setup.py
.github/workflows/: checks_pr.yml  publish-pypi.yml
CI/: run_with_env.cmd
CI/github/: build_source.sh  build_wheels.sh  test_source.sh
benchmark/: README.md  benchmark.py
cmake/: googletest-download.cmake  googletest.cmake
subseq/: alphabet.pxd  alphabet.pyx  subseq.pyx
subseq/cpp_sources/: .clang-tidy  Bitset.cpp  Bitset.hpp  CMakeLists.txt  CSubseq.cpp  CSubseq.hpp  FmIndex.cpp  FmIndex.hpp  FrequencyArray.cpp  FrequencyArray.hpp  Subquery.hpp  SubqueryGenerator.cpp  SubqueryGenerator.hpp  WaveletTree.cpp  WaveletTree.hpp  main.cpp  types.hpp
subseq/cpp_sources/cmake/: clang-cxx-dev-tools.cmake
test/: test_alphabet.py  test_subseq.py
test_cpp/: BitsetTest.cpp  FmIndexTest.cpp  SubqueryGeneratorTest.cpp  WaveletTreeTest.cpp
tests/: test_alphabet.py  test_subseq.py
tests_cpp/: CMakeLists.txt  CSubseqTest.cpp  FmIndexTest.cpp  FrequencyArrayTest.cpp
